rename to `.convert_*()` to indicate developer use

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,10 @@ S3method(varying_args,recipe)
 S3method(varying_args,step)
 export("%>%")
 export(.cols)
+export(.convert_form_to_xy_fit)
+export(.convert_form_to_xy_new)
+export(.convert_xy_to_form_fit)
+export(.convert_xy_to_form_new)
 export(.dat)
 export(.facts)
 export(.lvls)
@@ -124,11 +128,7 @@ export(check_empty_ellipse)
 export(check_final_param)
 export(contr_one_hot)
 export(control_parsnip)
-export(convert_form_to_xy_fit)
-export(convert_form_to_xy_new)
 export(convert_stan_interval)
-export(convert_xy_to_form_fit)
-export(convert_xy_to_form_new)
 export(decision_tree)
 export(eval_args)
 export(fit)
