--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,8 +122,8 @@ export(augment)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
-export(check_glmnet_penalty)
-export(check_penalty)
+export(check_glmnet_penalty_fit)
+export(check_glmnet_penalty_predict)
 export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
