rename internal helper functions to start with `.`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,8 @@ S3method(varying_args,model_spec)
 S3method(varying_args,recipe)
 S3method(varying_args,step)
 export("%>%")
+export(.check_glmnet_penalty_fit)
+export(.check_glmnet_penalty_predict)
 export(.cols)
 export(.dat)
 export(.facts)
@@ -123,8 +125,6 @@ export(augment)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
-export(check_glmnet_penalty_fit)
-export(check_glmnet_penalty_predict)
 export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
