--- a/NAMESPACE
+++ b/NAMESPACE
@@ -147,6 +147,8 @@ export(linear_reg)
 export(logistic_reg)
 export(make_call)
 export(make_classes)
+export(make_engine_list)
+export(make_seealso_list)
 export(mars)
 export(maybe_data_frame)
 export(maybe_matrix)
