--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(predict_time,model_fit)
 S3method(print,boost_tree)
 S3method(print,control_parsnip)
 S3method(print,decision_tree)
+S3method(print,gen_additive_mod)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
 S3method(print,mars)
@@ -76,6 +77,7 @@ S3method(tidy,nullmodel)
 S3method(translate,boost_tree)
 S3method(translate,decision_tree)
 S3method(translate,default)
+S3method(translate,gen_additive_mod)
 S3method(translate,linear_reg)
 S3method(translate,logistic_reg)
 S3method(translate,mars)
@@ -91,6 +93,7 @@ S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
 S3method(update,boost_tree)
 S3method(update,decision_tree)
+S3method(update,gen_additive_mod)
 S3method(update,linear_reg)
 S3method(update,logistic_reg)
 S3method(update,mars)
@@ -136,6 +139,7 @@ export(fit.model_spec)
 export(fit_control)
 export(fit_xy)
 export(fit_xy.model_spec)
+export(gen_additive_mod)
 export(get_dependency)
 export(get_encoding)
 export(get_fit)
@@ -248,6 +252,7 @@ importFrom(generics,tidy)
 importFrom(generics,varying_args)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
+importFrom(parsnip,translate)
 importFrom(purrr,as_vector)
 importFrom(purrr,imap)
 importFrom(purrr,imap_lgl)
