--- a/NAMESPACE
+++ b/NAMESPACE
@@ -300,6 +300,7 @@ importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,predict)
 importFrom(stats,qnorm)
+importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
 importFrom(stats,terms)
