extract_parsnip_spec -> extract_spec_parsnip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(augment,model_fit)
 S3method(extract_fit_engine,model_fit)
-S3method(extract_parsnip_spec,model_fit)
+S3method(extract_spec_parsnip,model_fit)
 S3method(fit,model_spec)
 S3method(fit_xy,gen_additive_mod)
 S3method(fit_xy,model_spec)
@@ -141,7 +141,7 @@ export(convert_stan_interval)
 export(decision_tree)
 export(eval_args)
 export(extract_fit_engine)
-export(extract_parsnip_spec)
+export(extract_spec_parsnip)
 export(fit)
 export(fit.model_spec)
 export(fit_control)
@@ -260,7 +260,7 @@ importFrom(generics,tidy)
 importFrom(generics,varying_args)
 importFrom(glue,glue_collapse)
 importFrom(hardhat,extract_fit_engine)
-importFrom(hardhat,extract_parsnip_spec)
+importFrom(hardhat,extract_spec_parsnip)
 importFrom(magrittr,"%>%")
 importFrom(purrr,as_vector)
 importFrom(purrr,imap)
