--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -90,6 +90,8 @@ navbar:
        href: https://www.tidymodels.org/learn/develop/models/
      - text: Evaluating submodels with the same model object
        href: articles/articles/Submodels.html
+     - text: Minimal Examples for Fitting and Predicting
+       href: articles/articles/Examples.html
   - text: News
     href: news/index.html
   - text: Reference
