new extract functions (#518)
* new extract functions

* missing hardhat remote

* extract_parsnip_spec -> extract_spec_parsnip

* notes about model extraction

* small text adjustments

* Update R/extract.R

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

* extract test cases

* less specific remote

Co-authored-by: Hannah Frick <hfrick@users.noreply.github.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     tidyr (>= 1.0.0),
     globals,
     prettyunits,
-    vctrs (>= 0.2.0)
+    vctrs (>= 0.2.0),
+    hardhat (>= 0.1.5.9000)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9001
 Suggests: 
@@ -59,4 +60,6 @@ Suggests:
     dials (>= 0.0.9.9000)
 Remotes:  
     tidymodels/dials,
-    topepo/C5.0
+    topepo/C5.0,
+    tidymodels/hardhat
+
