add a few more website req pkgs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,7 +71,8 @@ Remotes:
     tidymodels/dials
 ByteCompile: true
 Config/Needs/website:C50, earth, glmnet, keras, kernlab, kknn, LiblineaR,
-    mgcv, nnet, parsnip, randomForest, ranger, rpart, rstanarm, xgboost
+    mgcv, nnet, parsnip, randomForest, ranger, rpart, rstanarm, tidymodels,
+    tidyverse/tidytemplate, xgboost
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
