--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
 S3method(predict_survival,model_fit)
 S3method(predict_time,model_fit)
+S3method(print,bart)
 S3method(print,boost_tree)
 S3method(print,control_parsnip)
 S3method(print,decision_tree)
@@ -94,6 +95,7 @@ S3method(translate,svm_poly)
 S3method(translate,svm_rbf)
 S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
+S3method(update,bart)
 S3method(update,boost_tree)
 S3method(update,decision_tree)
 S3method(update,gen_additive_mod)
@@ -132,6 +134,8 @@ export(.y)
 export(C5.0_train)
 export(add_rowindex)
 export(augment)
+export(bart)
+export(bart_interval_calc)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
