added dbarts engine

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,13 +135,14 @@ export(C5.0_train)
 export(add_rowindex)
 export(augment)
 export(bart)
-export(bart_interval_calc)
+export(bartMachine_interval_calc)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
 export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
+export(dbart_predict_calc)
 export(decision_tree)
 export(eval_args)
 export(extract_fit_engine)
