--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,9 @@ export(predict_survival.model_fit)
 export(predict_time)
 export(predict_time.model_fit)
 export(prepare_data)
+export(prior_outcome_range)
+export(prior_terminal_node_coef)
+export(prior_terminal_node_expo)
 export(proportional_hazards)
 export(rand_forest)
 export(repair_call)
