Dynamically generate list of engines in `set_engine()` docs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Imports:
     tibble (>= 2.1.1),
     tidyr (>= 1.0.0),
     utils,
-    vctrs (>= 0.2.0)
+    vctrs (>= 0.2.0),
+    withr
 Suggests: 
     C50,
     covr,
