--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,8 @@ S3method(predict_raw,model_fit)
 S3method(predict_survival,model_fit)
 S3method(predict_time,model_fit)
 S3method(print,C5_rules)
+S3method(print,bag_mars)
+S3method(print,bag_tree)
 S3method(print,boost_tree)
 S3method(print,control_parsnip)
 S3method(print,cubist_rules)
@@ -105,6 +107,8 @@ S3method(translate,svm_rbf)
 S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
 S3method(update,C5_rules)
+S3method(update,bag_mars)
+S3method(update,bag_tree)
 S3method(update,boost_tree)
 S3method(update,cubist_rules)
 S3method(update,decision_tree)
@@ -153,6 +157,8 @@ export(C5.0_train)
 export(C5_rules)
 export(add_rowindex)
 export(augment)
+export(bag_mars)
+export(bag_tree)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
