--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
 S3method(predict_survival,model_fit)
 S3method(predict_time,model_fit)
+S3method(print,bart)
 S3method(print,boost_tree)
 S3method(print,control_parsnip)
 S3method(print,decision_tree)
@@ -94,6 +95,7 @@ S3method(translate,svm_poly)
 S3method(translate,svm_rbf)
 S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
+S3method(update,bart)
 S3method(update,boost_tree)
 S3method(update,decision_tree)
 S3method(update,gen_additive_mod)
@@ -132,12 +134,15 @@ export(.y)
 export(C5.0_train)
 export(add_rowindex)
 export(augment)
+export(bart)
+export(bartMachine_interval_calc)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
 export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
+export(dbart_predict_calc)
 export(decision_tree)
 export(eval_args)
 export(extract_fit_engine)
