--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,6 +48,7 @@ Suggests:
     covr,
     dials,
     earth,
+    ggplot2,
     keras,
     kernlab,
     kknn,
@@ -75,4 +76,4 @@ Config/Needs/website: C50, earth, glmnet, keras, kernlab, kknn, LiblineaR,
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1.9001
+RoxygenNote: 7.1.2
