--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ S3method(translate,mars)
 S3method(translate,mlp)
 S3method(translate,multinom_reg)
 S3method(translate,nearest_neighbor)
+S3method(translate,poisson_reg)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
 S3method(translate,svm_linear)
