--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,10 +46,18 @@ S3method(predict_raw,"_multnet")
 S3method(predict_raw,model_fit)
 S3method(predict_survival,model_fit)
 S3method(predict_time,model_fit)
+S3method(print,C5_rules)
+S3method(print,bag_mars)
+S3method(print,bag_tree)
 S3method(print,bart)
 S3method(print,boost_tree)
 S3method(print,control_parsnip)
+S3method(print,cubist_rules)
 S3method(print,decision_tree)
+S3method(print,discrim_flexible)
+S3method(print,discrim_linear)
+S3method(print,discrim_quad)
+S3method(print,discrim_regularized)
 S3method(print,gen_additive_mod)
 S3method(print,linear_reg)
 S3method(print,logistic_reg)
@@ -58,10 +66,14 @@ S3method(print,mlp)
 S3method(print,model_fit)
 S3method(print,model_spec)
 S3method(print,multinom_reg)
+S3method(print,naive_Bayes)
 S3method(print,nearest_neighbor)
 S3method(print,nullmodel)
+S3method(print,pls)
+S3method(print,poisson_reg)
 S3method(print,proportional_hazards)
 S3method(print,rand_forest)
+S3method(print,rule_fit)
 S3method(print,surv_reg)
 S3method(print,survival_reg)
 S3method(print,svm_linear)
@@ -88,6 +100,7 @@ S3method(translate,mars)
 S3method(translate,mlp)
 S3method(translate,multinom_reg)
 S3method(translate,nearest_neighbor)
+S3method(translate,poisson_reg)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
 S3method(translate,svm_linear)
@@ -95,18 +108,30 @@ S3method(translate,svm_poly)
 S3method(translate,svm_rbf)
 S3method(type_sum,model_fit)
 S3method(type_sum,model_spec)
+S3method(update,C5_rules)
+S3method(update,bag_mars)
+S3method(update,bag_tree)
 S3method(update,bart)
 S3method(update,boost_tree)
+S3method(update,cubist_rules)
 S3method(update,decision_tree)
+S3method(update,discrim_flexible)
+S3method(update,discrim_linear)
+S3method(update,discrim_quad)
+S3method(update,discrim_regularized)
 S3method(update,gen_additive_mod)
 S3method(update,linear_reg)
 S3method(update,logistic_reg)
 S3method(update,mars)
 S3method(update,mlp)
 S3method(update,multinom_reg)
+S3method(update,naive_Bayes)
 S3method(update,nearest_neighbor)
+S3method(update,pls)
+S3method(update,poisson_reg)
 S3method(update,proportional_hazards)
 S3method(update,rand_forest)
+S3method(update,rule_fit)
 S3method(update,surv_reg)
 S3method(update,survival_reg)
 S3method(update,svm_linear)
@@ -132,8 +157,11 @@ export(.preds)
 export(.x)
 export(.y)
 export(C5.0_train)
+export(C5_rules)
 export(add_rowindex)
 export(augment)
+export(bag_mars)
+export(bag_tree)
 export(bart)
 export(bartMachine_interval_calc)
 export(boost_tree)
@@ -142,8 +170,13 @@ export(check_final_param)
 export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
+export(cubist_rules)
 export(dbart_predict_calc)
 export(decision_tree)
+export(discrim_flexible)
+export(discrim_linear)
+export(discrim_quad)
+export(discrim_regularized)
 export(eval_args)
 export(extract_fit_engine)
 export(extract_spec_parsnip)
@@ -180,12 +213,15 @@ export(model_printer)
 export(multi_predict)
 export(multi_predict_args)
 export(multinom_reg)
+export(naive_Bayes)
 export(nearest_neighbor)
 export(new_model_spec)
 export(null_model)
 export(null_value)
 export(nullmodel)
 export(parsnip_addin)
+export(pls)
+export(poisson_reg)
 export(pred_value_template)
 export(predict.model_fit)
 export(predict_class.model_fit)
@@ -210,6 +246,7 @@ export(repair_call)
 export(req_pkgs)
 export(required_pkgs)
 export(rpart_train)
+export(rule_fit)
 export(set_args)
 export(set_dependency)
 export(set_encoding)
