complete model migration for survival models
`survival_reg()`: methods for `translate()` and `check_args()
`proportional_hazards(): method for `translate()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,8 +101,10 @@ S3method(translate,mlp)
 S3method(translate,multinom_reg)
 S3method(translate,nearest_neighbor)
 S3method(translate,poisson_reg)
+S3method(translate,proportional_hazards)
 S3method(translate,rand_forest)
 S3method(translate,surv_reg)
+S3method(translate,survival_reg)
 S3method(translate,svm_linear)
 S3method(translate,svm_poly)
 S3method(translate,svm_rbf)
