export `check_model_*()` mentioned in docs
"Tools to register models"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,8 @@ export(bartMachine_interval_calc)
 export(boost_tree)
 export(check_empty_ellipse)
 export(check_final_param)
+export(check_model_doesnt_exist)
+export(check_model_exists)
 export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
