--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,68 +1,38 @@
+# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
+# Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
+# Add Config/Needs/website: tidyverse/tidytemplate to DESCRIPTION
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [main, master]
+    tags: ['*']
   pull_request:
-    branches:
-      - master
-      - main
+    branches: [main, master]
 
 name: pkgdown
 
 jobs:
   pkgdown:
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
 
-      - uses: r-lib/actions/setup-r@v1
-
       - uses: r-lib/actions/setup-pandoc@v1
 
-      - name: System dependencies
-        run: brew install harfbuzz fribidi
-
-      - name: Install pak and query dependencies
-        run: |
-          install.packages("pak", repos = "https://r-lib.github.io/p/pak/dev/")
-          saveRDS(pak::pkg_deps("local::.", dependencies = TRUE), ".github/r-depends.rds")
-        shell: Rscript {0}
-
-      - name: Cache R packages
-        uses: actions/cache@v2
+      - uses: r-lib/actions/setup-r@v1
         with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/r-depends.rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
+          use-public-rspm: true
 
-      - name: Install system dependencies
+      - uses: r-lib/actions/setup-r-dependencies@v1
+        with:
+          extra-packages: r-lib/pkgdown
+          needs: website
+
+      - name: Install Miniconda + TensorFlow
         run: |
-          pak::local_system_requirements(execute = TRUE)
-          pak::pkg_system_requirements("pkgdown", execute = TRUE)
-          pak::pkg_system_requirements("textshaping", execute = TRUE)
-          pak::pkg_system_requirements("gert", execute = TRUE)
-        shell: Rscript {0}
-
-      - name: Install dependencies
-        run: |
-          pak::local_install_dev_deps(upgrade = TRUE, dependencies = c("all", "Config/Needs/website"))
-          pak::pkg_install("pkgdown")
-        shell: Rscript {0}
-
-      - name: Install Miniconda
-        run: |
-          Rscript -e "pak::pkg_install('rstudio/reticulate')"
-          Rscript -e "reticulate::install_miniconda()"
-
-      - name: Find Miniconda on macOS
-        if: runner.os == 'macOS'
-        run: echo "options(reticulate.conda_binary = reticulate:::miniconda_conda())" >> .Rprofile
-
-      - name: Install TensorFlow
-        run: |
+          pak::pkg_install('rstudio/reticulate')
+          reticulate::install_miniconda()
           reticulate::conda_create('r-reticulate', packages = c('python==3.6.9'))
           tensorflow::install_tensorflow(version='1.14.0')
         shell: Rscript {0}
@@ -71,13 +41,13 @@ jobs:
         run: R CMD INSTALL .
 
       - name: Build site
-        if: github.ref != 'refs/heads/master'
+        if: github.event_name == 'pull_request'
         run: |
           Rscript -e 'pkgdown::build_site()'
 
       - name: Deploy package
-        if: github.ref == 'refs/heads/master'
+        if: github.event_name == 'push'
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
+          git config --local user.name "$GITHUB_ACTOR"
+          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
           Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
