Add missing topic

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -70,6 +70,7 @@ reference:
       - tidy.model_fit
       - translate
       - starts_with("update")
+      - varying_args.model_spec
 
   - title: Developer Tools
     contents:
