another CXX14 attempt

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -52,6 +52,13 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
+      - name: Setup CXX14 for xgboost
+        run: |
+          writeLines("CXX14=g++
+          CXX14STD=-std=c++1y
+          CXX14FLAGS=-Wall -g -02", tools::makevars_user(), append = TRUE)
+        shell: Rscript {0}
+
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: rcmdcheck
