--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -54,15 +54,14 @@ jobs:
 
       - name: Setup CXX14 for xgboost
         run: |
-          if (getRversion() >= "4.0" & .Platform$OS.type == "windows") {
-            mv <- file.path(Sys.getenv("HOME"), ".R", "Makevars")
+          if (.Platform$OS.type == "windows") {
+            mv <- file.path(Sys.getenv("HOME"), ".R", "Makevars.win")
             cat(
               "\nCXX14FLAGS=-O3",
               "CXX14 = $(BINPREF)g++ -m$(WIN) -std=c++1y",
               "CXX11FLAGS=-O3",
               file = mv,
-              sep = "\n",
-              append = TRUE
+              sep = "\n"
             )
           }
         shell: Rscript {0}
