--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,6 +201,7 @@ export(glance)
 export(has_multi_predict)
 export(is_varying)
 export(keras_mlp)
+export(knit_engine_docs)
 export(linear_reg)
 export(logistic_reg)
 export(make_call)
