prototypes for engine extension package notes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,6 +225,7 @@ export(null_model)
 export(null_value)
 export(nullmodel)
 export(parsnip_addin)
+export(pkg_extension_note)
 export(pls)
 export(poisson_reg)
 export(pred_value_template)
