--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,7 +77,7 @@ Config/Needs/website:
     ranger, 
     rpart, 
     rstanarm,
-    tidymodels, 
+    tidymodels/tidymodels, 
     tidyverse/tidytemplate, 
     xgboost
 Encoding: UTF-8
