--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -77,10 +77,12 @@ Config/Needs/website:
     ranger, 
     rpart, 
     rstanarm,
-    tidymodels, 
+    tidymodels/tidymodels, 
     tidyverse/tidytemplate, 
     xgboost
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Remotes:  
+    tidymodels/dials
