--- a/NAMESPACE
+++ b/NAMESPACE
@@ -282,6 +282,7 @@ export(translate.default)
 export(update_dot_check)
 export(update_engine_parameters)
 export(update_main_parameters)
+export(update_model_info_file)
 export(varying)
 export(varying_args)
 export(xgb_train)
