--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: parsnip
 Title: A Common API to Modeling and Analysis Functions
-Version: 0.1.7.9003
+Version: 0.1.7.9004
 Authors@R: c(
     person("Max", "Kuhn", , "max@rstudio.com", role = c("aut", "cre")),
     person("Davis", "Vaughan", , "davis@rstudio.com", role = "aut"),
@@ -22,7 +22,7 @@ Imports:
     generics (>= 0.1.0.9000),
     globals,
     glue,
-    hardhat (>= 0.1.5.9000),
+    hardhat (>= 0.1.6.9000),
     lifecycle,
     magrittr,
     prettyunits,
@@ -85,4 +85,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Remotes:  
-    tidymodels/dials
+    tidymodels/dials,
+    tidymodels/hardhat
