--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(augment,model_fit)
 S3method(extract_fit_engine,model_fit)
+S3method(extract_parameter_set_dials,model_spec)
 S3method(extract_spec_parsnip,model_fit)
 S3method(fit,model_spec)
 S3method(fit_xy,gen_additive_mod)
@@ -184,6 +185,7 @@ export(discrim_quad)
 export(discrim_regularized)
 export(eval_args)
 export(extract_fit_engine)
+export(extract_parameter_set_dials)
 export(extract_spec_parsnip)
 export(find_engine_files)
 export(fit)
@@ -306,6 +308,7 @@ importFrom(generics,tidy)
 importFrom(generics,varying_args)
 importFrom(glue,glue_collapse)
 importFrom(hardhat,extract_fit_engine)
+importFrom(hardhat,extract_parameter_set_dials)
 importFrom(hardhat,extract_spec_parsnip)
 importFrom(magrittr,"%>%")
 importFrom(purrr,as_vector)
