--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,7 @@ Imports:
 Suggests: 
     C50,
     covr,
-    dials,
+    dials (>= 0.0.10.9001),
     earth,
     ggplot2,
     keras,
@@ -85,5 +85,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Remotes:  
-    tidymodels/dials,
+    tidymodels/dials@extract-parameter,
     tidymodels/hardhat
