Switch from req_pkgs() to required_pkgs() (#627)
* switch from req_pkgs() to required_pkgs()

* update tests

* soft deprecate req_pkgs()

* update contents of _pkgdown.yml

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -77,6 +77,8 @@ reference:
       - set_new_model
       - maybe_matrix
       - min_cols
+      - required_pkgs
+      - required_pkgs.model_spec
       - req_pkgs
 
 navbar:
