--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -81,6 +81,7 @@ Config/Needs/website:
     tidymodels/tidymodels, 
     tidyverse/tidytemplate, 
     xgboost
+Config/rcmdcheck/ignore-inconsequential-notes: true
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
