--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -85,5 +85,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Remotes:  
-    tidymodels/dials@extract-parameter,
+    tidymodels/dials,
     tidymodels/hardhat
