document list_md_problems()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,7 @@ export(is_varying)
 export(keras_mlp)
 export(knit_engine_docs)
 export(linear_reg)
+export(list_md_problems)
 export(logistic_reg)
 export(make_call)
 export(make_classes)
