reimport hardhat::tune

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -282,6 +282,7 @@ export(svm_rbf)
 export(tidy)
 export(translate)
 export(translate.default)
+export(tune)
 export(update_dot_check)
 export(update_engine_parameters)
 export(update_main_parameters)
@@ -313,6 +314,7 @@ importFrom(hardhat,extract_fit_engine)
 importFrom(hardhat,extract_parameter_dials)
 importFrom(hardhat,extract_parameter_set_dials)
 importFrom(hardhat,extract_spec_parsnip)
+importFrom(hardhat,tune)
 importFrom(magrittr,"%>%")
 importFrom(purrr,as_vector)
 importFrom(purrr,imap)
