--- a/NAMESPACE
+++ b/NAMESPACE
@@ -206,6 +206,7 @@ export(glance)
 export(has_multi_predict)
 export(is_varying)
 export(keras_mlp)
+export(keras_predict_classes)
 export(linear_reg)
 export(logistic_reg)
 export(make_call)
