--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Suggests:
     covr,
     dials (>= 0.0.10.9001),
     earth,
+    tensorflow,
     ggplot2,
     keras,
     kernlab,
@@ -84,6 +85,6 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Remotes:  
+Remotes: 
     tidymodels/dials,
     tidymodels/hardhat
