--- a/NAMESPACE
+++ b/NAMESPACE
@@ -207,6 +207,7 @@ export(has_multi_predict)
 export(is_varying)
 export(keras_mlp)
 export(keras_predict_classes)
+export(keras_predict_proba)
 export(linear_reg)
 export(logistic_reg)
 export(make_call)
