--- a/.github/workflows/old-tensorflow.yaml
+++ b/.github/workflows/old-tensorflow.yaml
@@ -10,10 +10,10 @@ on:
   pull_request:
     branches: [main, master]
 
-name: R-CMD-check
+name: old-tensorflow
 
 jobs:
-  R-CMD-check:
+  old-tensorflow:
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
