glmnet autoplot method

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: parsnip
 Title: A Common API to Modeling and Analysis Functions
-Version: 0.1.7.9005
+Version: 0.1.7.9006
 Authors@R: c(
     person("Max", "Kuhn", , "max@rstudio.com", role = c("aut", "cre")),
     person("Davis", "Vaughan", , "davis@rstudio.com", role = "aut"),
@@ -20,6 +20,8 @@ Depends:
 Imports: 
     dplyr (>= 0.8.0.1),
     generics (>= 0.1.0.9000),
+    ggplot2,
+    ggrepel,
     globals,
     glue,
     hardhat (>= 0.1.6.9001),
@@ -39,7 +41,6 @@ Suggests:
     covr,
     dials (>= 0.0.10.9001),
     earth,
-    ggplot2,
     keras,
     kernlab,
     kknn,
