--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,6 +165,8 @@ export(C5.0_train)
 export(C5_rules)
 export(add_rowindex)
 export(augment)
+export(autoplot.glmnet)
+export(autoplot.model_fit)
 export(bag_mars)
 export(bag_tree)
 export(bart)
@@ -309,6 +311,7 @@ importFrom(generics,glance)
 importFrom(generics,required_pkgs)
 importFrom(generics,tidy)
 importFrom(generics,varying_args)
+importFrom(ggplot2,autoplot)
 importFrom(glue,glue_collapse)
 importFrom(hardhat,extract_fit_engine)
 importFrom(hardhat,extract_parameter_dials)
