Add keras_set_seed function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -208,6 +208,7 @@ export(is_varying)
 export(keras_mlp)
 export(keras_predict_classes)
 export(keras_predict_proba)
+export(keras_set_seed)
 export(linear_reg)
 export(logistic_reg)
 export(make_call)
