--- a/NAMESPACE
+++ b/NAMESPACE
@@ -208,7 +208,6 @@ export(is_varying)
 export(keras_mlp)
 export(keras_predict_classes)
 export(keras_predict_proba)
-export(keras_set_seed)
 export(linear_reg)
 export(logistic_reg)
 export(make_call)
@@ -272,6 +271,7 @@ export(set_model_engine)
 export(set_model_mode)
 export(set_new_model)
 export(set_pred)
+export(set_tf_seed)
 export(show_call)
 export(show_engines)
 export(show_fit)
