Update internal functions to reflect deprecated keras functions (#639)
* Add keras_predict_classes to replace use of keras::predict_classes

* use keras_predict_classes

* update mlp_keras reference calculations in tests

* move from predict_proba() to predict()

* Create conditional tensorflow checking

* use newer version of tensorflow in GHA

* Add old tensorflow version GHA

* Set seeds for tensorflow

* only set tensorflow seed when you need it

* conditionally set seed in tensorflow by tensorflow version

* do conditional check innside keras_predict_* functions as well

* Add missing set_seed to keras logistic reg test

* seperate out old-tensorflow GHA

* add last missing tensorflow set_seed

* you need tensorflow AND R seed...

* use keras version as switch

* Conditionally transform predictions depending on tensorflow version

* skip test if tensorflow version can't be found

* refactor keras_predict_classes to avoid post function

* Add keras_set_seed function

* remove remotes

* rename keras_set_seed

* add news

* rename to set_tf_seed in all tests

* adjust "R CMD Check" and "old tensorflow" GHA

* don't use keras_predict_proba anymore

Co-authored-by: Max Kuhn <mxkuhn@gmail.com>

--- a/.github/workflows/old-tensorflow.yaml
+++ b/.github/workflows/old-tensorflow.yaml
@@ -11,10 +11,10 @@ on:
     branches: [main, master]
   workflow_dispatch:
 
-name: R-CMD-check
+name: old-tensorflow
 
 jobs:
-  R-CMD-check:
+  old-tensorflow:
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
@@ -23,14 +23,9 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: macOS-latest,   r: 'release'}
           - {os: windows-latest, r: 'release'}
           # Use older ubuntu to maximise backward compatibility
           - {os: ubuntu-18.04,   r: 'devel', http-user-agent: 'release'}
-          - {os: ubuntu-18.04,   r: 'release'}
-          - {os: ubuntu-18.04,   r: 'oldrel-1'}
-          - {os: ubuntu-18.04,   r: 'oldrel-2'}
-
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
@@ -66,7 +61,7 @@ jobs:
 
       - name: Install TensorFlow
         run: |
-          tensorflow::install_tensorflow(version='2.7', conda_python_version = NULL)
+          tensorflow::install_tensorflow(version='1.15', conda_python_version = NULL)
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
