--- a/NAMESPACE
+++ b/NAMESPACE
@@ -206,6 +206,7 @@ export(glance)
 export(has_multi_predict)
 export(is_varying)
 export(keras_mlp)
+export(keras_predict_classes)
 export(knit_engine_docs)
 export(linear_reg)
 export(list_md_problems)
@@ -271,6 +272,7 @@ export(set_model_engine)
 export(set_model_mode)
 export(set_new_model)
 export(set_pred)
+export(set_tf_seed)
 export(show_call)
 export(show_engines)
 export(show_fit)
