--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Suggests:
     covr,
     dials (>= 0.0.10.9001),
     earth,
+    tensorflow,
     ggplot2,
     keras,
     kernlab,
@@ -86,6 +87,3 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Remotes:  
-    tidymodels/dials,
-    tidymodels/hardhat
