--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,7 +59,7 @@ Suggests:
     sparklyr (>= 1.0.0),
     survival,
     testthat,
-    xgboost
+    xgboost (>= 1.5.0.1)
 VignetteBuilder: 
     knitr
 ByteCompile: true
