--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,6 +165,7 @@ export(C5.0_train)
 export(C5_rules)
 export(add_rowindex)
 export(augment)
+export(autoplot)
 export(bag_mars)
 export(bag_tree)
 export(bart)
@@ -314,6 +315,7 @@ importFrom(generics,glance)
 importFrom(generics,required_pkgs)
 importFrom(generics,tidy)
 importFrom(generics,varying_args)
+importFrom(ggplot2,autoplot)
 importFrom(glue,glue_collapse)
 importFrom(hardhat,extract_fit_engine)
 importFrom(hardhat,extract_parameter_dials)
@@ -321,6 +323,7 @@ importFrom(hardhat,extract_parameter_set_dials)
 importFrom(hardhat,extract_spec_parsnip)
 importFrom(hardhat,tune)
 importFrom(magrittr,"%>%")
+importFrom(purrr,"%||%")
 importFrom(purrr,as_vector)
 importFrom(purrr,imap)
 importFrom(purrr,imap_lgl)
