--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,18 +1,22 @@
-# Workflow derived from https://github.com/r-lib/actions/tree/master/examples
+# Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
-# Add Config/Needs/website: tidyverse/tidytemplate to DESCRIPTION
 on:
   push:
     branches: [main, master]
-    tags: ['*']
   pull_request:
     branches: [main, master]
+  release:
+    types: [published]
+  workflow_dispatch:
 
 name: pkgdown
 
 jobs:
   pkgdown:
     runs-on: ubuntu-latest
+    # Only restrict concurrency for non-PR jobs
+    concurrency:
+      group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -26,12 +30,8 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: r-lib/pkgdown
+          extra-packages: any::pkgdown, local::.
           needs: website
-
-      - name: Install dev reticulate
-        run: pak::pkg_install('rstudio/reticulate')
-        shell: Rscript {0}
 
       - name: Install Miniconda
         # conda can fail at downgrading python, so we specify python version in advance
@@ -45,17 +45,14 @@ jobs:
           tensorflow::install_tensorflow(version='2.7', conda_python_version = NULL)
         shell: Rscript {0}
 
-      - name: Install package
-        run: R CMD INSTALL .
-
       - name: Build site
-        if: github.event_name == 'pull_request'
-        run: |
-          Rscript -e 'pkgdown::build_site()'
+        run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
+        shell: Rscript {0}
 
-      - name: Deploy package
-        if: github.event_name == 'push'
-        run: |
-          git config --local user.name "$GITHUB_ACTOR"
-          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          Rscript -e 'pkgdown::deploy_to_branch(new_process = FALSE)'
+      - name: Deploy to GitHub pages 🚀
+        if: github.event_name != 'pull_request'
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          clean: false
+          branch: gh-pages
+          folder: docs
