--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,11 +1,30 @@
-url: https://parsnip.tidymodels.org
+url: https://parsnip.tidymodels.org/
+
+navbar:
+ components:
+   articles:
+    text: Articles
+    menu:
+    - text: Regression modeling
+      href: https://www.tidymodels.org/learn/models/parsnip-ranger-glmnet/
+    - text: Classification modeling
+      href: https://www.tidymodels.org/learn/models/parsnip-nnet/
+    - text: Making a parsnip model from scratch
+      href: https://www.tidymodels.org/learn/develop/models/
+    - text: Evaluating submodels with the same model object
+      href: articles/articles/Submodels.html
+    - text: Fitting and predicting with parsnip
+      href: articles/articles/Examples.html
 
 template:
+  package: tidytemplate
   bootstrap: 5
   bslib:
-    danger: "#CA225E"
     primary: "#CA225E"
-  package: tidytemplate
+
+  includes:
+      in_header: |
+        <script defer data-domain="parsnip.tidymodels.org,all.tidymodels.org" src="https://plausible.io/js/plausible.js"></script>
 
 development:
   mode: auto
@@ -81,20 +100,3 @@ reference:
       - required_pkgs
       - required_pkgs.model_spec
       - req_pkgs
-
-navbar:
- components:
-   articles:
-    text: Articles
-    menu:
-    - text: Regression modeling
-      href: https://www.tidymodels.org/learn/models/parsnip-ranger-glmnet/
-    - text: Classification modeling
-      href: https://www.tidymodels.org/learn/models/parsnip-nnet/
-    - text: Making a parsnip model from scratch
-      href: https://www.tidymodels.org/learn/develop/models/
-    - text: Evaluating submodels with the same model object
-      href: articles/articles/Submodels.html
-    - text: Fitting and predicting with parsnip
-      href: articles/articles/Examples.html
-
