changes based on reviewer feedback

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -196,6 +196,7 @@ export(fit.model_spec)
 export(fit_control)
 export(fit_xy)
 export(fit_xy.model_spec)
+export(frequency_weights)
 export(gen_additive_mod)
 export(get_dependency)
 export(get_encoding)
@@ -204,7 +205,9 @@ export(get_from_env)
 export(get_model_env)
 export(get_pred_type)
 export(glance)
+export(glm_grouped)
 export(has_multi_predict)
+export(importance_weights)
 export(is_varying)
 export(keras_mlp)
 export(keras_predict_classes)
@@ -321,6 +324,8 @@ importFrom(hardhat,extract_fit_engine)
 importFrom(hardhat,extract_parameter_dials)
 importFrom(hardhat,extract_parameter_set_dials)
 importFrom(hardhat,extract_spec_parsnip)
+importFrom(hardhat,frequency_weights)
+importFrom(hardhat,importance_weights)
 importFrom(hardhat,tune)
 importFrom(magrittr,"%>%")
 importFrom(purrr,"%||%")
