--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ export(bag_tree)
 export(bart)
 export(bartMachine_interval_calc)
 export(boost_tree)
+export(cforest_train)
 export(check_empty_ellipse)
 export(check_final_param)
 export(check_model_doesnt_exist)
@@ -178,6 +179,7 @@ export(check_model_exists)
 export(contr_one_hot)
 export(control_parsnip)
 export(convert_stan_interval)
+export(ctree_train)
 export(cubist_rules)
 export(dbart_predict_calc)
 export(decision_tree)
