function for translating names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,6 +156,7 @@ export(.convert_xy_to_form_new)
 export(.dat)
 export(.facts)
 export(.lvls)
+export(.model_param_name_key)
 export(.obs)
 export(.organize_glmnet_pred)
 export(.preds)
