switch from enquo(s) to enexpr(s)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -342,6 +342,8 @@ importFrom(rlang,abort)
 importFrom(rlang,call2)
 importFrom(rlang,caller_env)
 importFrom(rlang,current_env)
+importFrom(rlang,enexpr)
+importFrom(rlang,enexprs)
 importFrom(rlang,enquo)
 importFrom(rlang,enquos)
 importFrom(rlang,eval_tidy)
